# lints

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
examples/: compiler_plugin.rs  struct_to_markdown_table_by_syn.rs
src/: lib.rs  main.rs
src/lints/: check_enum_size.rs  fn_name_is_foo.rs  mod.rs
src/static_analysis_by_syn/: mod.rs  unused_async.rs
tests/: ui_test.rs
ui_test/: check_enum_size.rs  fn_name_is_foo.rs  fn_name_is_foo.stderr
