[package]
name = "lints"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

#[dev-dependencies]
#rustfmt-nightly = "1.4" # compile failed! feature(const_fn))] has been removed
#dissimilar = "1.0" # diff tool dtolnay/dissimilar used by rust-analyzer

[package.metadata.rust-analyzer]
rustc_private = true
